--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,6 +20,7 @@
     "react-hook-form": "^7.56.1",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.5.1",
+    "react-youtube": "^10.1.0",
     "tailwindcss": "^4.1.4",
     "youtube-url": "^0.5.0"
   },
