--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,11 +11,18 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.4",
-    "@tiptap/react": "^2.11.7",
-    "@tiptap/starter-kit": "^2.11.7",
+    "@tiptap/extension-link": "^2.11.9",
+    "@tiptap/extension-underline": "^2.11.9",
+    "@tiptap/react": "^2.11.9",
+    "@tiptap/starter-kit": "^2.11.9",
     "axios": "^1.8.4",
+    "chart": "^0.1.2",
+    "chart.js": "^4.4.9",
+    "js-cookie": "^3.0.5",
     "lucide-react": "^0.503.0",
+    "prosemirror-view": "^1.39.2",
     "react": "^19.0.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
     "react-player": "^2.16.0",
