--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
     "@tiptap/extension-underline": "^2.11.9",
     "@tiptap/react": "^2.11.9",
     "@tiptap/starter-kit": "^2.11.9",
+    "animate.css": "^4.1.1",
     "axios": "^1.8.4",
     "chart": "^0.1.2",
     "chart.js": "^4.4.9",
@@ -25,6 +26,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.1",
+    "react-icons": "^5.5.0",
     "react-player": "^2.16.0",
     "react-router-dom": "^7.5.1",
     "react-youtube": "^10.1.0",
